== Change Log

=== SVN
* Update RSpec and RSpec on Rails to r3333. [Josh French]
* Add autotest support for Radiant and extensions. [Josh French]
* Add pkg/ ignore to git, correct CSS problems with fieldset tables. 
[Sean Cribbs]
* Ignore git files when building gem. [Sean Cribbs]
* Fix generated test and spec harnesses, convert core extensions to specs.
[Sean Cribbs]
* Cover edge case in Page spec. [Sean Cribbs]
* Increase coverage of helper, controller, and model specs. [Sean Cribbs]
* Correct some view and spec bugs. [Sean Cribbs]
* Added specs for view helpers. [Sean Cribbs]
* Use TH for fieldset tables and correct error in CSS. [skrat]
* Adjust admin links and r:breadcrumbs tag to deal with Rails site prefix. 
[Sean Cribbs] 
* Adjust tags to deal with Rails site prefix (relative_url_root). 
[Sean Cribbs]
* Resolve issue with undefined method :view_paths in ActionMailer. 
[Sean Cribbs]
* Fixed incompatibility with RubyGems >= 0.9.5 that broke radiant:freeze:gems
rake task. [Michael Klett]
* Fixed problem with the list of templates containing duplicates in the
db:bootstrap rake task when not running in instance mode. [John Long]
* Update Subversion URL so rake radiant:freeze:edge works. [John Long]
* Add AVLUX to list of links in Styled Blog template. [John Long]
* Fix Ruby 1.8.5 compatibility issue with Dir[]. [Sean Cribbs]
* Backup old environment.rb when copying new version. [Sean Cribbs]
* Fill out more controller specs. [Sean Cribbs]
* Fix Admin::PageController specs. [Sean Cribbs]
* Make autotest work. [Matthew Elder]
* Clean up cache files before running site_controller spec. [Matthew Elder]
* Add r:status tag. [Andrew O'Brien]
* Add ability to set publication date manually. [Nick Plante, Sean Cribbs]
* Remove blank nodes in r:navigation tag. [ben]
* Bubble up parsing exceptions in development mode. [jonleighton]
* Fix authorization system for controller inheritance [Josh French]
* Add 'nolinks' attribute to breadcrumbs tag. [abstractioneer]